delivery/kubernetes/overlays/okteto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-nginx-service
                port:
                  number: 80
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: api-express-service
                port:
                  number: 4000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: api-express-service
                port:
                  number: 4000
